pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-app
spec:
  containers:
  - name: app
    image: busybox:latest
    command: ["sleep", "3600"]
